Unconnection from menu + Fix alignment

--- a/assets/stylesheets/modules/main-footer.styl
+++ b/assets/stylesheets/modules/main-footer.styl
@@ -41,8 +41,6 @@
 
 	&--contact
 		padding 0 8px
-		@media (min-width: 600px)
-			padding 0 16px
 
 		box-sizing border-box
 
